# swagger/swagger/swagger ex/swagger.yaml
@@ -21,90 +21,67 @@ paths:
             $ref: '#/definitions/UpdateChannelInfo'
       responses:
         200:
-          description: Return tests status
-          schema:
-            type: object
-            properties:
-              pets:
-                type: array
-                items:
-                  $ref: '#/definitions/UpdateChannelInfo'
-  /RunTestByMarkers:
+          description: Updated Cchannel info
+        404:
+          description: Data validation error
+  /Upload Video:
     post:
       tags: [Tests]
-      operationId: app.post_testByMarks
-      summary: Running pytest's tests by file name and marker
+      operationId: app.PostInsertVideo
+      summary: Upload new video
       parameters:
-        - name: Marker
+        - name: UploadVideo
           in: body
           schema:
-            $ref: '#/definitions/Marker'
+            $ref: '#/definitions/UploadVideo'
           in: body
           schema:
-            $ref: '#/definitions/Marker'
+            $ref: '#/definitions/UploadVideo'
       responses:
         200:
-          description: Return pets
+          description: Update a new video
           schema:
             type: object
             properties:
               pets:
                 type: array
                 items:
-                  $ref: '#/definitions/Marker'
-  /RunTestByName:
-    post:
+                  $ref: '#/definitions/UploadVideo'
+  /Delete Video:
+    delete:
       tags: [Tests]
-      operationId: app.post_testByName
-      summary: Running pytest's tests by test name
+      operationId: app.DeleteVideo
+      summary: Delete video by id
       parameters:
-        - name: TestName
+        - name: VideoToDelete
           in: body
           schema:
-            $ref: '#/definitions/TestName'
+            $ref: '#/definitions/VideoToDelete'
           in: body
           schema:
-            $ref: '#/definitions/TestName'
+            $ref: '#/definitions/VideoToDelete'
       responses:
         200:
-          description: Return pets
+          description: Deleted video
           schema:
             type: object
             properties:
               pets:
                 type: array
                 items:
-                  $ref: '#/definitions/TestName'
-  /RunTestByFolder:
-    post:
-      tags: [Tests]
-      operationId: app.post_testByFolder
-      summary: Running pytest's tests by folder name
-      parameters:
-        - name: FolderName
-          in: body
-          schema:
-            $ref: '#/definitions/FolderName'
-          in: body
-          schema:
-            $ref: '#/definitions/FolderName'
-      responses:
-        200:
-          description: Return pets
-          schema:
-            type: object
-            properties:
-              pets:
-                type: array
-                items:
-                  $ref: '#/definitions/FolderName'
-
+                  $ref: '#/definitions/VideoToDelete'
 definitions:
   UpdateChannelInfo:
     type: object
     required:
-      - title
+      - id
     properties:
+      id:
+        type: string
+        description: Channel's id
+        example: "1bo10ebo12be0100"
+        minLength: 1
+        maxLength: 100
       title:
         type: string
         description: Channel's title
@@ -123,11 +100,12 @@ definitions:
         example: "D:\\demoImage.png"
         minLength: 1
         maxLength: 100
-  Marker:
+  UploadVideo:
     type: object
     required:
       - fileName
-      - marker
+      - description
+      - title
     properties:
       fileName:
         type: string
@@ -135,38 +113,26 @@ definitions:
         example: "/ExampleTests/TestFileExample1.py"
         minLength: 1
         maxLength: 100
-      marker:
+      description:
         type: string
-        description: Marker Name
-        example: "low"
+        description: Description of the uploaded file
+        example: "The best movie ever"
         minLength: 1
         maxLength: 100
-  TestName:
+      title:
+        type: string
+        description: Title for the uploaded video
+        example: "Gil's movie"
+        minLength: 1
+        maxLength: 100
+  VideoToDelete:
     type: object
     required:
-      - fileName
-      - testName
+      - id
     properties:
-      fileName:
+      id:
         type: string
-        description: File Name
-        example: "/ExampleTests/TestFileExample1.py"
-        minLength: 1
-        maxLength: 100
-      testName:
-        type: string
-        description: Test Name
-        example: "test_subtraction"
-        minLength: 1
-        maxLength: 100
-  FolderName:
-    type: object
-    required:
-      - folderName
-    properties:
-      folderName:
-        type: string
-        description: Folder Name
-        example: "/ExampleTests"
+        description: video id
+        example: "kb234j"
         minLength: 1
         maxLength: 100
